# Rythm_Daw

./: .chromatic.js  .cursorrules  .env.example  .env.test  .eslintignore  .eslintrc.cjs  .gitignore  0001-Initial-commit-with-scaffold-structure.patch  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  Dockerfile  Info.plist  Makefile  PROJECT_LOG.md  README.md  Rythm_Daw.code-workspace  babel.config.js  build_plugin.sh  dev.sh  docker-compose.yml  eslint-report.json  filelist.json  filelist.txt  jest.config.cjs  jest.config.js  jest.e2e.config.js  jest.e2e.setup.js  jest.setup.browser.cjs  jest.setup.cjs  jest.setup.node.cjs  jest.setup.ts  lint-results.json  move_pages.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.js  restart-api.sh  (+4 more)
.github/: env.example
.github/workflows/: aws-postgres-auth-test.yml  build-release.yml  ci-ecr.yml  ci.yml
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
app/components/: RegistrationProvider.tsx
app/lib/: security.ts  store.ts  validation.ts
app/machines/: registrationMachine.ts
artillery/: ws.yml
cdk.out/: DataStack.assets.json  DataStack.template.json  EcsStack.assets.json  VpcStack.assets.json  VpcStack.template.json  manifest.json
ci/: README.md
codemods/: any-to-unknown.js
docs/: project_log.md
infra/: Makefile  README.md  cdk.json  package.json  tsconfig.json
infra/cdk.out/: EcsStack.template.json  manifest.json  tree.json
infra/lib/: data-stack.ts  ecs-stack.ts  vpc-stack.ts
infra/rhythm-hub-compose-main-2/: index.html  tailwind.config.ts
installers/linux/: install.sh
installers/mac/: install.sh
installers/windows/: install.ps1
load/: k6-plugin-download.js
lovable-src/: README.md  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json
lovable-src/src/: App.tsx
lovable-src/ui-kit/: package-lock.json  package.json
pact/: pact.config.js
plugin/: README.md  package.json
plugin/Source/: FileShareClient.cpp  FileShareClient.h  PluginScanner.cpp  PluginScanner.h  RealtimeChatClient.cpp  RealtimeChatClient.h  SnapshotManager.cpp  SnapshotManager.h
plugins/rythm-plugin/: CMakeLists.txt  README.md
plugins/rythm-plugin/Resources/: Info-AU.plist.in
plugins/rythm-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/rythm-plugin/Source/Bridge/: BridgeClient.cpp  BridgeClient.h  Json.h
plugins/rythm-plugin/Source/DSP/: Meters.h
plugins/rythm-plugin/Source/UI/: SectionView.h  Sidebar.h
plugins/rythm-plugin/scripts/: auval.sh  bootstrap.sh  build_debug.sh  build_release.sh  codesign_local.sh  install_local.sh  make_pkg.sh
prisma/: schema.prisma
rhythm-hub-compose-02/rhythm-hub-compose-02-main/: package-lock.json
rhythm-hub-compose-main/src/: index.css
scripts/: check-security.sh  parse-eslint-results.cjs  restart-api.sh
server/: .env  .env.example  .env.test  .eslintrc.js  AUTHENTICATION_TEST_RESULTS.md  AWS_POSTGRES_SETUP.md  Dockerfile  README.md  S3_INTEGRATION_TESTING.md  app.module.ts  codecov.yml  cross-env  jest-e2e.config.js  jest.config.js  main.ts  nest-cli.json  package-lock.json  package.json  playwright.config.ts  simple-app.ts  test-app.ts  test-register.js  tsconfig.app.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.spec.json  update-imports-manual.js  update-imports.js
server/playwright-report/: index.html
server/prisma/: dev.db  prisma.service.js  prisma.service.js.map  prisma.service.ts  schema.backup.prisma  schema.prisma  seed-minimal.js  seed-simple.js.map  seed-simple.ts  seed.js  seed.js.map  seed.ts  test.db
server/scripts/: debug-auth.js  raw-websocket-test.js  run-seed.ts  seed-db.js  seed-db.ts  setup-aws-postgres.js  simple-http-ws.js  test-s3-integration.js  test-s3-real.js  test-upstash-connection.js  test-upstash-redis.js  test-upstash-rest.js  test-upstash-service.js  test-websocket.js  websocket-test.js
server/src/: app.module.ts  main.ts
server/test/: auth.e2e-spec.ts  chat.gateway.fixed.spec.ts  chat.gateway.spec.ts  chat.gateway.unit.spec.ts  chat.heartbeat.spec.ts  chat.heartbeat.unit.spec.ts  check-heartbeat.ts  controller-test.spec.ts  direct-controller-test.spec.ts  direct-files-controller.spec.ts  direct-files-service.spec.ts  e2e.app.e2e-spec.ts  e2e.security.e2e-spec.ts  ensure-s3-bucket.ts  files-controller.spec.ts  files-module.spec.ts  files.controller.spec.ts  files.service.spec.ts  integration.redis.spec.ts  integration.ulid-upload.spec.ts  jest-e2e.json  jest-websocket.config.js  jest.setup.ts  jest.websocket.config.js  presence.service.spec.ts  rtc-enhanced.gateway.legacy.skip.ts  rtc-enhanced.gateway.spec.ts  rtc.controller.spec.ts  rtc.gateway.legacy.skip.ts  rtc.gateway.new.spec.ts  rtc.gateway.spec.ts  rtc.integration.spec.ts  rtc.manual.test.ts  rtc.new.test.ts  rtc.offer.spec.ts  rtc.presign.e2e.spec.ts  rtc.presign.fixed.spec.ts  rtc.presign.spec.ts  rtc.simple.test.ts  rtc.smoke.legacy.skip.ts  (+45 more)
shared/: README.md  package.json
shared/hooks/: index.ts  useChatMessages.ts  useChatThreads.ts  useDashboard.ts  useFileTransferWS.ts  useFileUpload.ts  useFriendRequests.ts  useFriends.ts  useSendMessage.ts  useTransfers.ts  (+2 more)
test-results/: .last-run.json
tests/: auth-flow.spec.ts  auth.e2e-spec.ts  auth.setup.ts  jest.e2e.setup.d.ts  landing-login.spec.ts  plugin.e2e-spec.ts  setupTests.ts
ui-dev/: index.html  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.ts
ui-kit/: package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
web/: .env.example  DYNAMIC_IMPLEMENTATION_REPORT.md  README.md  debug-tests.sh  jest.setup.js  middleware.ts  next.config.js  package.json  playwright.config.mts  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
website/: .env  Dockerfile  jest.setup.js  next.config.js  package.json  playwright.config.mts  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json
(+853 files in other folders)
